Traduccion del archivo howto/descriptor

--- a/howto/descriptor.po
+++ b/howto/descriptor.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-03-10 23:18-0600\n"
+"PO-Revision-Date: 2023-03-12 13:34-0600\n"
 "Last-Translator: Rodrigo Tobar <rtobarc@gmail.com>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -711,7 +711,7 @@ msgid ""
 "`__getattribute__` raises an :exc:`AttributeError`.  Their logic is "
 "encapsulated in a helper function:"
 msgstr ""
-"En cambio, es el operador punto (.) y la función :func:getattr los que son "
+"En cambio, es el operador punto y la función :func:getattr los que son "
 "responsables de invocar :meth:__getattr__ cada vez que :meth:"
 "__getattribute__ lanza un :exc:AttributeError. Su lógica está encapsulada en "
 "una función auxiliar:"
@@ -1294,7 +1294,8 @@ msgid ""
 msgstr ""
 "La ruta de código para ``hasattr(obj, '__get__')`` fue añadida en Python "
 "3.9, y hace posible que :func:`classmethod` soporte decoradores encadenados."
-"Por ejemplo, un classmethod y un property se puede encadenar."
+"Por ejemplo, un classmethod y un property se puede encadenar. En Python "
+"3.11, esta funcionalidad fue marcada como obsoleta."
 
 #: ../Doc/howto/descriptor.rst:1428
 msgid "Member objects and __slots__"
