Traduccion howto/descriptor

--- a/howto/descriptor.po
+++ b/howto/descriptor.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-03-12 13:34-0600\n"
+"PO-Revision-Date: 2023-03-12 14:51-0600\n"
 "Last-Translator: Rodrigo Tobar <rtobarc@gmail.com>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -699,10 +699,10 @@ msgid ""
 "code.  That is why calling :meth:`__getattribute__` directly or with "
 "``super().__getattribute__`` will bypass :meth:`__getattr__` entirely."
 msgstr ""
-"Nota, no hay un gancho :meth:__getattr__ en el código de :meth:"
-"__getattribute__. Es por eso que llamar a :meth:__getattribute__ "
-"directamente o con super().__getattribute__ evitará completamente a :meth:"
-"__getattr__."
+"Nota, no hay un gancho :meth:`__getattr__` en el código de :meth:"
+"`__getattribute__` . Es por eso que llamar a :meth:`__getattribute__` "
+"directamente o con ``super().__getattribute__`` evitará completamente a :"
+"meth:`__getattr__`."
 
 #: ../Doc/howto/descriptor.rst:723
 msgid ""
@@ -711,10 +711,10 @@ msgid ""
 "`__getattribute__` raises an :exc:`AttributeError`.  Their logic is "
 "encapsulated in a helper function:"
 msgstr ""
-"En cambio, es el operador punto y la función :func:getattr los que son "
-"responsables de invocar :meth:__getattr__ cada vez que :meth:"
-"__getattribute__ lanza un :exc:AttributeError. Su lógica está encapsulada en "
-"una función auxiliar:"
+"En cambio, es el operador punto y la función :func:`getattr` los que son "
+"responsables de invocar :meth:`__getattr__` cada vez que :meth:"
+"`__getattribute__` lanza un :exc:`AttributeError`. Su lógica está "
+"encapsulada en una función auxiliar:"
 
 #: ../Doc/howto/descriptor.rst:773
 msgid "Invocation from a class"
