--- a/tutorial/errors.po
+++ b/tutorial/errors.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-03-10 13:05+0000\n"
+"PO-Revision-Date: 2023-03-14 16:33-0300\n"
 "Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -20,7 +20,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.2.2\n"
 
 #: ../Doc/tutorial/errors.rst:5
 msgid "Errors and Exceptions"
@@ -241,7 +241,6 @@ msgstr ""
 "coincidente."
 
 #: ../Doc/tutorial/errors.rst:150
-#, fuzzy
 msgid ""
 "When an exception occurs, it may have associated values, also known as the "
 "exception's *arguments*. The presence and types of the arguments depend on "
@@ -259,9 +258,13 @@ msgid ""
 "types define :meth:`__str__` to print all the arguments without explicitly "
 "accessing ``.args``.  ::"
 msgstr ""
+"La *cláusula except* puede especificar una variable después del nombre de la "
+"excepción.  La variable está ligada a la instancia de la excepción, que "
+"normalmente tiene un atributo ``args`` que almacena los argumentos. Por "
+"conveniencia, los tipos de excepción incorporados definen :meth:`__str__` "
+"para imprimir todos los argumentos sin acceder explícitamente a ``.args``. ::"
 
 #: ../Doc/tutorial/errors.rst:177
-#, fuzzy
 msgid ""
 "The exception's :meth:`__str__` output is printed as the last part "
 "('detail') of the message for unhandled exceptions."
@@ -280,6 +283,13 @@ msgid ""
 "exit` and :exc:`KeyboardInterrupt` which is raised when a user wishes to "
 "interrupt the program."
 msgstr ""
+":exc:`BaseException` es la clase base común de todas las excepciones. Una de "
+"sus subclases, :exc:`Exception`, es la clase base de todas las excepciones "
+"no fatales. Las excepciones que no son subclases de :exc:`Exception` no se "
+"suelen manejar, porque se utilizan para indicar que el programa debe "
+"terminar. Entre ellas se incluyen :exc:`SystemExit`, que es lanzada por :"
+"meth:`sys.exit` y :exc:`KeyboardInterrupt`, que se lanza cuando un usuario "
+"desea interrumpir el programa."
 
 #: ../Doc/tutorial/errors.rst:188
 msgid ""
@@ -351,7 +361,6 @@ msgstr ""
 "una excepción específica.  Por ejemplo::"
 
 #: ../Doc/tutorial/errors.rst:258
-#, fuzzy
 msgid ""
 "The sole argument to :keyword:`raise` indicates the exception to be raised. "
 "This must be either an exception instance or an exception class (a class "
@@ -435,7 +444,6 @@ msgstr ""
 "`Exception`, directa o indirectamente."
 
 #: ../Doc/tutorial/errors.rst:357
-#, fuzzy
 msgid ""
 "Exception classes can be defined which do anything any other class can do, "
 "but are usually kept simple, often only offering a number of attributes that "
@@ -445,10 +453,7 @@ msgstr ""
 "Las clases de Excepción pueden ser definidas de la misma forma que cualquier "
 "otra clase, pero es habitual mantenerlas lo más simples posible, a menudo "
 "ofreciendo solo un número de atributos con información sobre el error que "
-"leerán los gestores de la excepción.  Al crear un módulo que puede lanzar "
-"varios errores distintos, una práctica común es crear una clase base para "
-"excepciones definidas en ese módulo y extenderla para crear clases "
-"excepciones específicas para distintas condiciones de error::"
+"leerán los gestores de la excepción."
 
 #: ../Doc/tutorial/errors.rst:361
 msgid ""
@@ -459,14 +464,12 @@ msgstr ""
 "de manera similar a la nomenclatura de las excepciones estándar."
 
 #: ../Doc/tutorial/errors.rst:364
-#, fuzzy
 msgid ""
 "Many standard modules define their own exceptions to report errors that may "
 "occur in functions they define."
 msgstr ""
 "Muchos módulos estándar definen sus propias excepciones para reportar "
-"errores que pueden ocurrir en funciones propias. Se puede encontrar más "
-"información sobre clases en el capítulo :ref:`tut-classes`."
+"errores que pueden ocurrir en funciones propias."
 
 #: ../Doc/tutorial/errors.rst:371
 msgid "Defining Clean-up Actions"
@@ -636,6 +639,11 @@ msgid ""
 "cases where it is desirable to continue execution and collect multiple "
 "errors rather than raise the first exception."
 msgstr ""
+"Hay situaciones en las que es necesario informar de varias excepciones que "
+"se han producido. Este es a menudo el caso en los marcos de concurrencia, "
+"cuando varias tareas pueden haber fallado en paralelo, pero también hay "
+"otros casos de uso en los que es deseable continuar la ejecución y recoger "
+"múltiples errores en lugar de lanzar la primera excepción."
 
 #: ../Doc/tutorial/errors.rst:504
 msgid ""
@@ -655,6 +663,13 @@ msgid ""
 "extracts from the group exceptions of a certain type while letting all other "
 "exceptions propagate to other clauses and eventually to be reraised. ::"
 msgstr ""
+"Utilizando ``except*`` en lugar de ``except``, podemos manejar "
+"selectivamente sólo las excepciones del grupo que coincidan con un "
+"determinado tipo. En el siguiente ejemplo, que muestra un grupo de "
+"excepciones anidado, cada cláusula ``except*`` extrae del grupo las "
+"excepciones de un tipo determinado, mientras que deja que el resto de "
+"excepciones se propaguen a otras cláusulas y, finalmente, se vuelvan a "
+"lanzar. ::"
 
 #: ../Doc/tutorial/errors.rst:564
 msgid ""
@@ -682,6 +697,13 @@ msgid ""
 "standard traceback rendering includes all notes, in the order they were "
 "added, after the exception. ::"
 msgstr ""
+"Cuando se crea una excepción para ser lanzada, normalmente se inicializa con "
+"información que describe el error que se ha producido. Hay casos en los que "
+"es útil añadir información después de que la excepción haya sido capturada. "
+"Para este propósito, las excepciones tienen un método ``add_note(note)`` que "
+"acepta una cadena y la añade a la lista de notas de la excepción. La "
+"representación estándar del rastreo incluye todas las notas, en el orden en "
+"que fueron añadidas, después de la excepción. ::"
 
 #: ../Doc/tutorial/errors.rst:605
 msgid ""
