--- a/tutorial/errors.po
+++ b/tutorial/errors.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-03-14 16:55-0300\n"
+"PO-Revision-Date: 2023-03-14 17:09-0300\n"
 "Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -368,11 +368,11 @@ msgid ""
 "its subclasses).  If an exception class is passed, it will be implicitly "
 "instantiated by calling its constructor with no arguments::"
 msgstr ""
-"El único argumento de :keyword:`raise` indica la excepción a generarse. "
-"Tiene que ser o una instancia de excepción, o una clase de excepción (una "
-"clase que hereda de :class:`Exception`). Si se pasa una clase de excepción, "
-"la misma será instanciada implícitamente llamando a su constructor sin "
-"argumentos::"
+"El único argumento de :keyword:`raise` indica la excepción a lanzar. Debe "
+"ser una instancia de excepción o una clase de excepción (una clase que "
+"derive de :class:`BaseException`, como :exc:`Exception` o una de sus "
+"subclases). Si se pasa una clase de excepción, se instanciará implícitamente "
+"llamando a su constructor sin argumentos::"
 
 #: ../Doc/tutorial/errors.rst:266
 msgid ""
