--- a/tutorial/errors.po
+++ b/tutorial/errors.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-03-14 17:09-0300\n"
+"PO-Revision-Date: 2023-03-14 17:22-0300\n"
 "Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -258,7 +258,7 @@ msgid ""
 "types define :meth:`__str__` to print all the arguments without explicitly "
 "accessing ``.args``.  ::"
 msgstr ""
-"La *cláusula except* puede especificar una variable después del nombre de la "
+"La cláusula *except* puede especificar una variable después del nombre de la "
 "excepción. La variable está ligada a la instancia de la excepción, que "
 "normalmente tiene un atributo ``args`` que almacena los argumentos. Por "
 "conveniencia, los tipos de excepción incorporados definen :meth:`__str__` "
