--- a/tutorial/errors.po
+++ b/tutorial/errors.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-03-15 10:27-0300\n"
+"PO-Revision-Date: 2023-03-15 14:09-0300\n"
 "Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -264,14 +264,15 @@ msgstr ""
 "conveniencia, los tipos de excepción incorporados definen :meth:`__str__` "
 "para imprimir todos los argumentos sin acceder explícitamente a ``.args``. ::"
 
+# No estoy seguro si es la mejor traducción.
 #: ../Doc/tutorial/errors.rst:177
+#, fuzzy
 msgid ""
 "The exception's :meth:`__str__` output is printed as the last part "
 "('detail') of the message for unhandled exceptions."
 msgstr ""
-"Si una excepción tiene argumentos, estos se imprimen como en la parte final "
-"(el 'detalle') del mensaje para las excepciones no gestionadas ('*Unhandled "
-"exception*')."
+"La salida :meth:`__str__` de la excepción se imprime como la última parte "
+"('detalle') del mensaje para las excepciones no manejadas."
 
 #: ../Doc/tutorial/errors.rst:180
 msgid ""
