Se quito format-python para evitar problemas en traduccion

--- a/howto/descriptor.po
+++ b/howto/descriptor.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-03-12 14:51-0600\n"
+"PO-Revision-Date: 2023-03-12 16:51-0600\n"
 "Last-Translator: Rodrigo Tobar <rtobarc@gmail.com>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -886,14 +886,13 @@ msgid "ORM example"
 msgstr "Ejemplo de mapeos objeto-relacional (*ORM*)"
 
 #: ../Doc/howto/descriptor.rst:850
-#, fuzzy, python-format
 msgid ""
 "The following code is a simplified skeleton showing how data descriptors "
 "could be used to implement an `object relational mapping <https://en."
 "wikipedia.org/wiki/Object%E2%80%93relational_mapping>`_."
 msgstr ""
 "El siguiente código es un esqueleto simplificado que muestra cómo "
-"descriptores de datos pueden ser usados para implementar un mapeo objeto-"
+"descriptores de datos pueden ser usados para implementar un `mapeo objeto-"
 "relacional <https://es.wikipedia.org/wiki/Asignaci%C3%B3n_objeto-"
 "relacional>`_."
 
@@ -1342,7 +1341,6 @@ msgstr ""
 "una gran cantidad de instancias será creada."
 
 #: ../Doc/howto/descriptor.rst:1490
-#, fuzzy, python-format
 msgid ""
 "4. Improves speed.  Reading instance variables is 35% faster with "
 "``__slots__`` (as measured with Python 3.10 on an Apple M1 processor)."
