Traducido reference/import (#2335)
Closes #1904

---------

Co-authored-by: rtobar <rtobarc@gmail.com>

--- a/reference/import.po
+++ b/reference/import.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
 "PO-Revision-Date: 2021-08-02 19:27+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
 
 #: ../Doc/reference/import.rst:6
@@ -185,7 +185,6 @@ msgstr ""
 "un atributo ``__path__`` se considera un paquete."
 
 #: ../Doc/reference/import.rst:85
-#, fuzzy
 msgid ""
 "All modules have a name.  Subpackage names are separated from their parent "
 "package name by a dot, akin to Python's standard attribute access syntax.  "
@@ -193,12 +192,12 @@ msgid ""
 "subpackage called :mod:`email.mime` and a module within that subpackage "
 "called :mod:`email.mime.text`."
 msgstr ""
-"Todos los módulos tienen un nombre.  Los nombres de los subpaquetes se "
-"separan del nombre del paquete padre por puntos, similar a la sintaxis de "
-"acceso a atributos estándar de Python. Así, puedes tener un módulo llamado :"
-"mod:`sys` y un paquete llamado :mod:`email`, que a su vez tiene un "
-"subpaquete llamado :mod:`email.mime` y un módulo dentro de ese subpaquete "
-"llamado :mod:`email.mime.text`."
+"Todos los módulos tienen un nombre. Los nombres de los subpaquetes están "
+"separados de su nombre de paquete principal por un punto, similar a la "
+"sintaxis de acceso de atributo estándar de Python. Por lo tanto, podría "
+"tener un paquete llamado :mod:`email`, que a su vez tiene un subpaquete "
+"llamado :mod:`email.mime` y un módulo dentro de ese subpaquete llamado :mod:"
+"`email.mime.text`."
 
 #: ../Doc/reference/import.rst:93
 msgid "Regular packages"
@@ -943,18 +942,16 @@ msgstr ""
 "tiene la siguiente estructura de directorios:"
 
 #: ../Doc/reference/import.rst:494
-#, fuzzy
 msgid "and ``spam/__init__.py`` has the following line in it::"
-msgstr "y ``spam/__init__.py`` tiene las siguientes líneas::"
+msgstr "y ``spam/__init__.py`` tiene la siguiente línea::"
 
 #: ../Doc/reference/import.rst:498
-#, fuzzy
 msgid ""
 "then executing the following puts name bindings for ``foo`` and ``Foo`` in "
 "the ``spam`` module::"
 msgstr ""
 "a continuación, la ejecución de lo siguiente pone un nombre vinculante para "
-"``foo`` y ``bar`` en el módulo ``spam``::"
+"``foo`` y ``Foo`` en el módulo ``spam``::"
 
 #: ../Doc/reference/import.rst:507
 msgid ""
@@ -1027,15 +1024,14 @@ msgstr ""
 "que el cargador ejecute el módulo."
 
 #: ../Doc/reference/import.rst:544
-#, fuzzy
 msgid ""
 "The ``__name__`` attribute must be set to the fully qualified name of the "
 "module.  This name is used to uniquely identify the module in the import "
 "system."
 msgstr ""
-"El atributo ``__name__`` debe establecerse en el nombre completo del "
-"módulo.  Este nombre se utiliza para identificar de forma única el módulo en "
-"el sistema de importación."
+"El atributo ``__name__`` debe establecerse en el nombre completo del módulo. "
+"Este nombre se utiliza para identificar de forma exclusiva el módulo en el "
+"sistema de importación."
 
 #: ../Doc/reference/import.rst:550
 msgid ""
@@ -1147,6 +1143,15 @@ msgid ""
 "interpreter, and the import system may opt to leave it unset if it has no "
 "semantic meaning (e.g. a module loaded from a database)."
 msgstr ""
+"``__file__`` es opcional (si se establece, el valor debe ser una cadena). "
+"Indica el nombre de ruta del archivo desde el que se cargó el módulo (si se "
+"cargó desde un archivo), o el nombre de ruta del archivo de biblioteca "
+"compartida para módulos de extensión cargados dinámicamente desde una "
+"biblioteca compartida. Es posible que falte para ciertos tipos de módulos, "
+"como los módulos C que están vinculados estáticamente al intérprete, y el "
+"sistema de importación puede optar por dejarlo sin configurar si no tiene un "
+"significado semántico (por ejemplo, un módulo cargado desde una base de "
+"datos)."
 
 #: ../Doc/reference/import.rst:613
 msgid ""
@@ -1155,6 +1160,11 @@ msgid ""
 "file). The file does not need to exist to set this attribute; the path can "
 "simply point to where the compiled file would exist (see :pep:`3147`)."
 msgstr ""
+"Si se establece ``__file__``, también se puede establecer el atributo "
+"``__cached__``, que es la ruta a cualquier versión compilada del código (por "
+"ejemplo, un archivo compilado por bytes). No es necesario que el archivo "
+"exista para establecer este atributo; la ruta simplemente puede indicar "
+"dónde existiría el archivo compilado (ver :pep:`3147`)."
 
 #: ../Doc/reference/import.rst:619
 msgid ""
@@ -1165,6 +1175,13 @@ msgid ""
 "module but otherwise does not load from a file, that atypical scenario may "
 "be appropriate."
 msgstr ""
+"Tenga en cuenta que se puede configurar ``__cached__`` incluso si "
+"``__file__`` no está configurado. Sin embargo, ese escenario es bastante "
+"atípico. En última instancia, el cargador es lo que hace uso de la "
+"especificación del módulo proporcionada por el buscador (del que se derivan "
+"``__file__`` y ``__cached__``). Entonces, si un cargador puede cargar desde "
+"un módulo almacenado en caché pero no carga desde un archivo, ese escenario "
+"atípico puede ser apropiado."
 
 #: ../Doc/reference/import.rst:629
 msgid "module.__path__"
@@ -1531,7 +1548,6 @@ msgstr ""
 "proporcionan formas adicionales de personalizar la maquinaria de importación."
 
 #: ../Doc/reference/import.rst:797
-#, fuzzy
 msgid ""
 ":data:`sys.path` contains a list of strings providing search locations for "
 "modules and packages.  It is initialized from the :data:`PYTHONPATH` "
@@ -1543,16 +1559,14 @@ msgid ""
 "other data types are ignored."
 msgstr ""
 ":data:`sys.path` contiene una lista de cadenas que proporcionan ubicaciones "
-"de búsqueda para módulos y paquetes.  Se inicializa a partir de la variable "
+"de búsqueda para módulos y paquetes. Se inicializa a partir de la variable "
 "de entorno :data:`PYTHONPATH` y varios otros valores predeterminados "
-"específicos de la instalación e implementación.  Las entradas de :data:`sys."
+"específicos de instalación e implementación. Las entradas en :data:`sys."
 "path` pueden nombrar directorios en el sistema de archivos, archivos zip y "
-"potencialmente otras \"ubicaciones\" (consulte el módulo :mod:`site`) que se "
-"deben buscar para módulos, como direcciones URL o consultas de base de "
-"datos.  Solo las cadenas y bytes deben estar presentes en :data:`sys.path`; "
-"todos los demás tipos de datos se omiten.  La codificación de las entradas "
-"de bytes viene determinada por los :term:`buscadores de entrada de ruta "
-"<path entry finder>`."
+"potencialmente otras \"ubicaciones\" (consulte el módulo :mod:`site`) en las "
+"que se deben buscar módulos, como URL o consultas de bases de datos. Solo "
+"las cadenas deben estar presentes en :data:`sys.path`; todos los demás tipos "
+"de datos se ignoran."
 
 #: ../Doc/reference/import.rst:806
 msgid ""
@@ -1576,7 +1590,6 @@ msgstr ""
 "una importación de nivel superior y se utiliza :data:`sys.path`."
 
 #: ../Doc/reference/import.rst:815
-#, fuzzy
 msgid ""
 "The path based finder iterates over every entry in the search path, and for "
 "each of these, looks for an appropriate :term:`path entry finder` (:class:"
@@ -1591,20 +1604,20 @@ msgid ""
 "cache entries from :data:`sys.path_importer_cache` forcing the path based "
 "finder to perform the path entry search again [#fnpic]_."
 msgstr ""
-"El buscador basado en rutas de acceso recorre en iteración cada entrada de "
-"la ruta de búsqueda y, para cada una de ellas, busca un :term:`path entry "
-"finder` adecuado (:class:`~importlib.abc.PathEntryFinder`) para la entrada "
-"de ruta de acceso.  Dado que esto puede ser una operación costosa (por "
-"ejemplo, puede haber sobrecargas de llamadas `stat()` para esta búsqueda), "
-"el buscador basado en rutas mantiene una ruta de acceso de asignación de "
-"caché entradas a los buscadores de entrada de ruta.  Esta memoria caché se "
-"mantiene en :data:`sys.path_importer_cache` (a pesar del nombre, esta caché "
-"almacena realmente objetos de buscador en lugar de limitarse a objetos :term:"
-"`importer`). De esta manera, la costosa búsqueda de una ubicación en "
-"particular :term:`path entry` :term:`path entry finder` solo debe hacerse "
-"una vez.  El código de usuario es libre de eliminar las entradas de caché "
-"de :data:`sys.path_importer_cache` obligando al buscador basado en ruta de "
-"acceso a realizar de nuevo la búsqueda de entrada de ruta [#fnpic]_."
+"El buscador basado en la ruta itera sobre cada entrada en la ruta de "
+"búsqueda y, para cada una de ellas, busca un :term:`path entry finder` (:"
+"class:`~importlib.abc.PathEntryFinder`) apropiado para la entrada de la "
+"ruta. Debido a que esta puede ser una operación costosa (por ejemplo, puede "
+"haber gastos generales de llamadas ``stat()`` para esta búsqueda), el "
+"buscador basado en rutas mantiene una caché que asigna entradas de rutas a "
+"buscadores de entradas de rutas. Esta memoria caché se mantiene en :data:"
+"`sys.path_importer_cache` (a pesar del nombre, esta memoria caché en "
+"realidad almacena objetos de búsqueda en lugar de limitarse a objetos :term:"
+"`importer`). De esta forma, la costosa búsqueda del :term:`path entry "
+"finder` de una ubicación :term:`path entry` en particular solo debe "
+"realizarse una vez. El código de usuario es libre de eliminar entradas de "
+"caché de :data:`sys.path_importer_cache`, lo que obliga al buscador basado "
+"en rutas a realizar la búsqueda de entrada de ruta nuevamente [#fnpic]_."
 
 #: ../Doc/reference/import.rst:828
 msgid ""
@@ -1758,9 +1771,9 @@ msgid ""
 "a namespace :term:`portion`."
 msgstr ""
 ":meth:`~importlib.abc.PathEntryFinder.find_loader` toma un argumento, el "
-"nombre completo del módulo que se está importando. ``find_loader()`` "
-"devuelve una 2-tupla donde el primer elemento es el cargador y el segundo "
-"elemento es un espacio de nombres :term:`portion`."
+"nombre completo del módulo que se está importando. ``find_loader()`` retorna "
+"una 2-tupla donde el primer elemento es el cargador y el segundo elemento es "
+"un espacio de nombres :term:`portion`."
 
 #: ../Doc/reference/import.rst:895
 msgid ""
@@ -2100,78 +2113,3 @@ msgstr ""
 "NullImporter` en el :data:`sys.path_importer_cache`.  Se recomienda cambiar "
 "el código para usar ``None`` en su lugar.  Consulte :ref:`portingpythoncode` "
 "para obtener más detalles."
-
-#~ msgid ""
-#~ "``__file__`` is optional. If set, this attribute's value must be a "
-#~ "string.  The import system may opt to leave ``__file__`` unset if it has "
-#~ "no semantic meaning (e.g. a module loaded from a database)."
-#~ msgstr ""
-#~ "``__file__`` es opcional. Si se establece, el valor de este atributo debe "
-#~ "ser una cadena.  El sistema de importación puede optar por dejar "
-#~ "``__file__`` sin establecer si no tiene un significado semántico (por "
-#~ "ejemplo, un módulo cargado desde una base de datos)."
-
-#~ msgid ""
-#~ "If ``__file__`` is set, it may also be appropriate to set the "
-#~ "``__cached__`` attribute which is the path to any compiled version of the "
-#~ "code (e.g. byte-compiled file). The file does not need to exist to set "
-#~ "this attribute; the path can simply point to where the compiled file "
-#~ "would exist (see :pep:`3147`)."
-#~ msgstr ""
-#~ "Si se establece ``__file__``, también puede ser apropiado establecer el "
-#~ "atributo ``__cached__``, que es la ruta de acceso a cualquier versión "
-#~ "compilada del código (por ejemplo, archivo compilado por bytes). No es "
-#~ "necesario que exista el archivo para establecer este atributo; la ruta de "
-#~ "acceso puede simplemente apuntar a donde existiría el archivo compilado "
-#~ "(consulte :pep:`3147`)."
-
-#~ msgid ""
-#~ "It is also appropriate to set ``__cached__`` when ``__file__`` is not "
-#~ "set.  However, that scenario is quite atypical.  Ultimately, the loader "
-#~ "is what makes use of ``__file__`` and/or ``__cached__``.  So if a loader "
-#~ "can load from a cached module but otherwise does not load from a file, "
-#~ "that atypical scenario may be appropriate."
-#~ msgstr ""
-#~ "También es apropiado establecer ``__cached__`` cuando ``__file__`` no "
-#~ "está establecido.  Sin embargo, ese escenario es bastante atípico.  En "
-#~ "última instancia, el cargador es lo que hace uso de ``__file__`` y/o "
-#~ "``__cached__``.  Por lo tanto, si un cargador puede cargar desde un "
-#~ "módulo almacenado en caché pero no se carga desde un archivo, ese "
-#~ "escenario atípico puede ser adecuado."
-
-#~ msgid "Open issues"
-#~ msgstr "Problemas sin resolver"
-
-#~ msgid "XXX It would be really nice to have a diagram."
-#~ msgstr "XXX Sería muy agradable tener un diagrama."
-
-#~ msgid ""
-#~ "XXX * (import_machinery.rst) how about a section devoted just to the "
-#~ "attributes of modules and packages, perhaps expanding upon or supplanting "
-#~ "the related entries in the data model reference page?"
-#~ msgstr ""
-#~ "XXX * (import_machinery.rst) ¿qué tal una sección dedicada sólo a los "
-#~ "atributos de módulos y paquetes, tal vez ampliando o suplantando las "
-#~ "entradas relacionadas en la página de referencia del modelo de datos?"
-
-#~ msgid ""
-#~ "XXX runpy, pkgutil, et al in the library manual should all get \"See "
-#~ "Also\" links at the top pointing to the new import system section."
-#~ msgstr ""
-#~ "XXX runpy, pkgutil, et al en el manual de la biblioteca deben obtener "
-#~ "enlaces \"Ver también\" en la parte superior que apuntan a la nueva "
-#~ "sección del sistema de importación."
-
-#~ msgid ""
-#~ "XXX Add more explanation regarding the different ways in which "
-#~ "``__main__`` is initialized?"
-#~ msgstr ""
-#~ "XXX Añadir más explicación con respecto a las diferentes formas en que "
-#~ "``__main__`` se inicializa?"
-
-#~ msgid ""
-#~ "XXX Add more info on ``__main__`` quirks/pitfalls (i.e. copy from :pep:"
-#~ "`395`)."
-#~ msgstr ""
-#~ "XXX Añadir más información sobre las peculiaridades/trampas ``__main__`` "
-#~ "(es decir, copia de :pep:`395`)."
