Traducción howto/logging.po

--- a/howto/logging.po
+++ b/howto/logging.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-11-26 15:09+0100\n"
+"PO-Revision-Date: 2023-03-20 15:59-0300\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es_US\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #: ../Doc/howto/logging.rst:3
 msgid "Logging HOWTO"
@@ -285,7 +286,6 @@ msgid "Logging to a file"
 msgstr "Logging a un archivo"
 
 #: ../Doc/howto/logging.rst:126
-#, fuzzy
 msgid ""
 "A very common situation is that of recording logging events in a file, so "
 "let's look at that next. Be sure to try the following in a newly started "
@@ -356,7 +356,6 @@ msgstr ""
 "de entrada del usuario, quizás como en el siguiente ejemplo::"
 
 #: ../Doc/howto/logging.rst:181
-#, fuzzy
 msgid ""
 "The call to :func:`basicConfig` should come *before* any calls to :func:"
 "`debug`, :func:`info`, etc. Otherwise, those functions will call :func:"
@@ -364,10 +363,12 @@ msgid ""
 "off simple configuration facility, only the first call will actually do "
 "anything: subsequent calls are effectively no-ops."
 msgstr ""
-"La llamada a :func:`basicConfig` debería venir *antes* de cualquier llamada "
-"a :func:`debug`, :func:`info` etc. Como se pretende hacer una simple "
-"facilidad de configuración única, sólo la primera llamada hará realmente "
-"algo: las llamadas subsiguientes son efectivamente no-ops."
+"La llamada a :func:`basicConfig` debe venir *antes* de cualquier llamada a :"
+"func:`debug`, :func:`info`, etc. De lo contrario, esas funciones llamarán a :"
+"func:`basicConfig` por usted con las opciones predeterminadas. Como está "
+"diseñado como una instalación de configuración simple única, solo la primera "
+"llamada realmente hará algo: las llamadas posteriores son efectivamente sin "
+"operaciones."
 
 #: ../Doc/howto/logging.rst:187
 msgid ""
@@ -451,10 +452,10 @@ msgid ""
 "options *are* supported, but exploring them is outside the scope of this "
 "tutorial: see :ref:`formatting-styles` for more information."
 msgstr ""
-"Como puede ver, la fusión de datos variables en el mensaje de descripción "
-"del evento utiliza el antiguo estilo % de formato de cadena de caracteres. "
+"Como puede ver, la combinación de datos variables en el mensaje de "
+"descripción del evento utiliza el antiguo formato de cadena de %-estilo. "
 "Esto es por compatibilidad con versiones anteriores: el paquete de registro "
-"es anterior a opciones de formato más nuevas como :meth:`str.format` y :"
+"es anterior a las opciones de formato más nuevas, como :meth:`str.format` y :"
 "class:`string.Template`. Estas nuevas opciones de formato *son* compatibles, "
 "pero explorarlas está fuera del alcance de este tutorial: consulte :ref:"
 "`formatting-styles` para obtener más información."
@@ -1052,17 +1053,16 @@ msgstr ""
 "formato de fecha por defecto es:"
 
 #: ../Doc/howto/logging.rst:555
-#, fuzzy
 msgid ""
 "with the milliseconds tacked on at the end. The ``style`` is one of ``'%'``, "
 "``'{'``, or ``'$'``. If one of these is not specified, then ``'%'`` will be "
 "used."
 msgstr ""
-"con los milisegundos clavados al final. El ``style`` es uno de `%`, ‘{‘ o "
-"‘$’. Si uno de estos no se especifica, entonces se usará ‘%’."
+"con los milisegundos insertados al final. El ``style`` es uno de ``'%'``, "
+"``'{'`` o ``‘$’``. Si uno de estos no se especifica, entonces se usará "
+"``‘%’``."
 
 #: ../Doc/howto/logging.rst:558
-#, fuzzy
 msgid ""
 "If the ``style`` is ``'%'``, the message format string uses ``%(<dictionary "
 "key>)s`` styled string substitution; the possible keys are documented in :"
@@ -1071,13 +1071,13 @@ msgid ""
 "arguments), while if the style is ``'$'`` then the message format string "
 "should conform to what is expected by :meth:`string.Template.substitute`."
 msgstr ""
-"Si el ``style`` es '%', la cadena del formato de mensaje utiliza "
+"Si el ``style`` es ``'%'``, la cadena del formato de mensaje utiliza "
 "``%(<dictionary key>)s`` estilo de sustitución de cadena; las posibles "
-"claves están documentadas en  :ref:`logrecord-attributes`. Si el estilo es "
-"'{', se asume que la cadena del formato del mensaje es compatible con :meth:"
-"`str.format` (usando argumentos de palabras clave), mientras que si el "
-"estilo es '$' entonces la cadena del formato del mensaje debe ajustarse a lo "
-"que se espera de :meth:`string.Template.substitute`."
+"llaves están documentadas en :ref:`logrecord-attributes`. Si el estilo es "
+"``'{'``, se asume que la cadena del formato del mensaje es compatible con :"
+"meth:`str.format` (usando argumentos de palabras clave), mientras que si el "
+"estilo es ``'$'`` entonces la cadena del formato del mensaje debe ajustarse "
+"a lo que se espera de :meth:`string.Template.substitute`."
 
 #: ../Doc/howto/logging.rst:565
 msgid "Added the ``style`` parameter."
