Traducido archivo howto/curses.po

--- a/howto/curses.po
+++ b/howto/curses.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-03-19 16:22-0600\n"
+"PO-Revision-Date: 2023-03-20 17:27-0600\n"
 "Last-Translator: Juan Diego Alfonso Ocampo <juandiego.alfonsoocampo@gmail."
 "com>\n"
 "Language-Team: python-doc-es\n"
@@ -56,7 +56,7 @@ msgstr ""
 
 #: ../Doc/howto/curses.rst:18
 msgid "What is curses?"
-msgstr "Qué es curses?"
+msgstr "¿Qué es curses?"
 
 #: ../Doc/howto/curses.rst:20
 msgid ""
