--- a/howto/logging.po
+++ b/howto/logging.po
@@ -1059,7 +1059,7 @@ msgid ""
 "used."
 msgstr ""
 "con los milisegundos insertados al final. El ``style`` es uno de ``'%'``, "
-"``'{'`` o ``‘$’``. Si uno de estos no se especifica, entonces se usará "
+"``'{'`` o ``'$'``. Si uno de estos no se especifica, entonces se usará "
 "``‘%’``."
 
 #: ../Doc/howto/logging.rst:558
