Apply suggestions from code review
Co-authored-by: rtobar <rtobarc@gmail.com>

--- a/extending/extending.po
+++ b/extending/extending.po
@@ -319,9 +319,9 @@ msgid ""
 msgstr ""
 "Cuando una función *f* que llama a otra función *g* detecta que esta última "
 "falla, *f* debería retornar un valor de error (normalmente ``NULL`` o "
-"``-1``). Debería *not* llamar a una de las funciones ``PyErr_*`` --- *g* ya "
+"``-1``). Debería *no* llamar a una de las funciones ``PyErr_*`` --- *g* ya "
 "ha llamado a una. Se supone que la persona que llama a *f* también retornará "
-"una indicación de error a la persona que llama a *its*, nuevamente *without* "
+"una indicación de error a *su* persona que la llama, nuevamente *sin* "
 "llama a ``PyErr_*``, y así sucesivamente --- la función que lo detectó "
 "primero ya informó la causa más detallada del error. Una vez que el error "
 "llega al bucle principal del intérprete de Python, este aborta el código de "
@@ -339,7 +339,7 @@ msgstr ""
 "(Hay situaciones en las que un módulo puede dar un mensaje de error más "
 "detallado llamando a otra función ``PyErr_*``, y en tales casos está bien "
 "hacerlo. Sin embargo, como regla general, esto no es necesario y puede "
-"generar información sobre el causa de la pérdida del error: la mayoría de "
+"causar que se pierda información sobre la causa del error: la mayoría de "
 "las operaciones pueden fallar por una variedad de razones)."
 
 #: ../Doc/extending/extending.rst:174
@@ -1854,7 +1854,7 @@ msgstr ""
 "El siguiente ejemplo demuestra un enfoque que pone la mayor parte de la "
 "carga sobre el escritor del módulo de exportación, que es apropiado para los "
 "módulos de biblioteca de uso común. Almacena todos los punteros de la API de "
-"C (¡solo uno en el ejemplo!) en una matriz de punteros :c:expr:`void` que se "
+"C (¡solo uno en el ejemplo!) en un arreglo de punteros :c:expr:`void` que se "
 "convierte en el valor de una Cápsula. El archivo de encabezado "
 "correspondiente al módulo proporciona una macro que se encarga de importar "
 "el módulo y recuperar sus punteros C API; los módulos de cliente solo tienen "
