--- a/extending/extending.po
+++ b/extending/extending.po
@@ -321,12 +321,12 @@ msgstr ""
 "falla, *f* debería retornar un valor de error (normalmente ``NULL`` o "
 "``-1``). Debería *no* llamar a una de las funciones ``PyErr_*`` --- *g* ya "
 "ha llamado a una. Se supone que la persona que llama a *f* también retornará "
-"una indicación de error a *su* persona que la llama, nuevamente *sin* "
-"llama a ``PyErr_*``, y así sucesivamente --- la función que lo detectó "
-"primero ya informó la causa más detallada del error. Una vez que el error "
-"llega al bucle principal del intérprete de Python, este aborta el código de "
-"Python que se está ejecutando actualmente e intenta encontrar un controlador "
-"de excepciones especificado por el programador de Python."
+"una indicación de error a *su* persona que la llama, nuevamente *sin* llama "
+"a ``PyErr_*``, y así sucesivamente --- la función que lo detectó primero ya "
+"informó la causa más detallada del error. Una vez que el error llega al "
+"bucle principal del intérprete de Python, este aborta el código de Python "
+"que se está ejecutando actualmente e intenta encontrar un controlador de "
+"excepciones especificado por el programador de Python."
 
 #: ../Doc/extending/extending.rst:168
 msgid ""
@@ -339,8 +339,8 @@ msgstr ""
 "(Hay situaciones en las que un módulo puede dar un mensaje de error más "
 "detallado llamando a otra función ``PyErr_*``, y en tales casos está bien "
 "hacerlo. Sin embargo, como regla general, esto no es necesario y puede "
-"causar que se pierda información sobre la causa del error: la mayoría de "
-"las operaciones pueden fallar por una variedad de razones)."
+"causar que se pierda información sobre la causa del error: la mayoría de las "
+"operaciones pueden fallar por una variedad de razones)."
 
 #: ../Doc/extending/extending.rst:174
 msgid ""
