Traducido archivo howto/sockets

--- a/howto/sockets.po
+++ b/howto/sockets.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-08-04 20:37+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
+"PO-Revision-Date: 2023-03-21 10:44-0300\n"
+"Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2.2\n"
 
 #: ../Doc/howto/sockets.rst:5
 msgid "Socket Programming HOWTO"
@@ -471,9 +472,16 @@ msgid ""
 "little-endian, with the least significant byte first - that same ``1`` would "
 "be ``01 00``."
 msgstr ""
+"Es perfectamente posible enviar datos binarios a través de un socket. El "
+"principal problema es que no todas las máquinas utilizan los mismos formatos "
+"para datos binarios. Por ejemplo, `orden de bytes de red <https://en."
+"wikipedia.org/wiki/Endianness#Networking>`_ es big-endian, con el byte más "
+"significativo primero, por lo que es un entero de 16 bits con el valor ``1` "
+"` serían los dos bytes hexadecimales `` 00 01``. Sin embargo, los "
+"procesadores más comunes (x86/AMD64, ARM, RISC-V) son little-endian, con el "
+"byte menos significativo primero; ese mismo ``1`` sería ``01 00``."
 
 #: ../Doc/howto/sockets.rst:262
-#, fuzzy
 msgid ""
 "Socket libraries have calls for converting 16 and 32 bit integers - ``ntohl, "
 "htonl, ntohs, htons`` where \"n\" means *network* and \"h\" means *host*, "
@@ -481,20 +489,13 @@ msgid ""
 "order, these do nothing, but where the machine is byte-reversed, these swap "
 "the bytes around appropriately."
 msgstr ""
-"Es perfectamente posible mandar datos binarios en un socket. El mayor "
-"problema es que no todas las máquinas usan el mismo formato para datos "
-"binarios. Por ejemplo, un chip Motorola representa un entero de 16 bit con "
-"el valor 1 como los dos bytes hexadecimales 00 01. Intel y DEC, sin embargo, "
-"son de \"bytes invertidos\" - el mismo valor 1 es 01 00. Las bibliotecas de "
-"sockets tienen funciones para convertir enteros de 16 y 32 bit - ``ntohl, "
-"htonl, ntohs, htons`` donde la \"n\" significa \"network\" y \"h\" significa "
-"\"host\", \"s\" significa \"short\" y \"l\" significa \"long\". Cuando el "
-"orden de la red es el orden del servidor, estas funciones no hacen nada, "
-"pero cuando la máquina es de \"bytes invertidos\", estas cambian los bytes "
-"apropiadamente."
+"Las bibliotecas de socket tienen llamadas para convertir enteros de 16 y 32 "
+"bits - ``ntohl, htonl, ntohs, htons`` donde \"n\" significa *red* y \"h\" "
+"significa *host*, \"s\" significa *corto* y \"l \" significa *largo*. Cuando "
+"el orden de la red es el orden del host, estos no hacen nada, pero cuando la "
+"máquina está invertida en bytes, intercambian los bytes de manera adecuada."
 
 #: ../Doc/howto/sockets.rst:268
-#, fuzzy
 msgid ""
 "In these days of 64-bit machines, the ASCII representation of binary data is "
 "frequently smaller than the binary representation. That's because a "
