Fix translate and delete old translates

--- a/tutorial/errors.po
+++ b/tutorial/errors.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-03-21 10:31-0300\n"
+"PO-Revision-Date: 2023-03-21 10:58-0300\n"
 "Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -266,13 +266,12 @@ msgstr ""
 
 # No estoy seguro si es la mejor traducción.
 #: ../Doc/tutorial/errors.rst:177
-#, fuzzy
 msgid ""
 "The exception's :meth:`__str__` output is printed as the last part "
 "('detail') of the message for unhandled exceptions."
 msgstr ""
 "La salida :meth:`__str__` de la excepción se imprime como la última parte "
-"('detalle') del mensaje para las excepciones no manejadas."
+"('detalle') del mensaje para las excepciones no gestionadas."
 
 #: ../Doc/tutorial/errors.rst:180
 msgid ""
@@ -712,69 +711,7 @@ msgid ""
 "to add context information for the individual errors. In the following each "
 "exception in the group has a note indicating when this error has occurred. ::"
 msgstr ""
-
-#~ msgid ""
-#~ "All exceptions inherit from :exc:`BaseException`, and so it can be used "
-#~ "to serve as a wildcard. Use this with extreme caution, since it is easy "
-#~ "to mask a real programming error in this way!  It can also be used to "
-#~ "print an error message and then re-raise the exception (allowing a caller "
-#~ "to handle the exception as well)::"
-#~ msgstr ""
-#~ "Todas las excepciones heredan de :exc:`BaseException`, por lo que se "
-#~ "puede utilizar como comodín. ¡Use esto con extrema precaución, ya que es "
-#~ "fácil enmascarar un error de programación real de esta manera! También se "
-#~ "puede usar para imprimir un mensaje de error y luego volver a generar la "
-#~ "excepción (permitiendo que la función que llama también maneje la "
-#~ "excepción):"
-
-#~ msgid ""
-#~ "Alternatively the last except clause may omit the exception name(s), "
-#~ "however the exception value must then be retrieved from ``sys.exc_info()"
-#~ "[1]``."
-#~ msgstr ""
-#~ "Alternativamente, la última cláusula except puede omitir el(los) "
-#~ "nombre(s) de excepción, sin embargo, el valor de la excepción debe "
-#~ "recuperarse de ``sys.exc_info()[1]``."
-
-#~ msgid ""
-#~ "The *except clause* may specify a variable after the exception name.  The "
-#~ "variable is bound to an exception instance with the arguments stored in "
-#~ "``instance.args``.  For convenience, the exception instance defines :meth:"
-#~ "`__str__` so the arguments can be printed directly without having to "
-#~ "reference ``.args``.  One may also instantiate an exception first before "
-#~ "raising it and add any attributes to it as desired. ::"
-#~ msgstr ""
-#~ "La *cláusula except* puede especificar una variable después del nombre de "
-#~ "la excepción. La variable está vinculada a una instancia de excepción con "
-#~ "los argumentos almacenados en ``instance.args``. Por conveniencia, la "
-#~ "instancia de excepción define :meth:`__str__` para que los argumentos se "
-#~ "puedan imprimir directamente sin tener que hacer referencia a ``.args``. "
-#~ "También se puede crear una instancia de una excepción antes de generarla "
-#~ "y agregarle los atributos que desee. ::"
-
-#~ msgid ""
-#~ "Exception handlers don't just handle exceptions if they occur immediately "
-#~ "in the *try clause*, but also if they occur inside functions that are "
-#~ "called (even indirectly) in the *try clause*. For example::"
-#~ msgstr ""
-#~ "Los gestores de excepciones no solo gestionan las excepciones si ocurren "
-#~ "inmediatamente en la *cláusula try*, sino también si ocurren dentro de "
-#~ "funciones que son llamadas (incluso indirectamente) en la *cláusula try*. "
-#~ "Por ejemplo::"
-
-#~ msgid ""
-#~ "The :keyword:`raise` statement allows an optional :keyword:`from<raise>` "
-#~ "which enables chaining exceptions. For example::"
-#~ msgstr ""
-#~ "La declaración :keyword:`raise` permite una palabra clave opcional :"
-#~ "keyword:`from<raise>` que habilita el encadenamiento de excepciones. Por "
-#~ "ejemplo::"
-
-#~ msgid ""
-#~ "Exception chaining happens automatically when an exception is raised "
-#~ "inside an :keyword:`except` or :keyword:`finally` section. This can be "
-#~ "disabled by using ``from None`` idiom:"
-#~ msgstr ""
-#~ "El encadenamiento de excepciones ocurre automáticamente cuando se lanza "
-#~ "una excepción dentro de una sección :keyword:`except` o :keyword:"
-#~ "`finally`. Esto se puede desactivar usando el modismo ``from None``:"
+"Por ejemplo, al recopilar excepciones en un grupo de excepciones, es posible "
+"que queramos añadir información de contexto para los errores individuales. A "
+"continuación, cada excepción del grupo tiene una nota que indica cuándo se "
+"ha producido ese error. ::"
